--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="header" >
+
+    </header>
+
+    <section class="home">
+
+    </section>
+
+    <section class="about" >
+
+    </section>
+
+    <section class="projects">
+
+    </section>
+
+    <section class="contact" >
+
+    </section>
+
+    <footer class="main-footer">
+
+    </footer>
+
 </body>
 </html>
