--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 </head>
 <body>
     <header class="header" >
+        <div class="header-conteudo">
+        <img src="header-img" alt="">
+        <button class="hamburger-menu">&#9776;</button>
+        <nav class="header-menu">
+            <a class="header-menu-item" href="#">Home</a>
+            <a class="header-menu-item" href="#">Quem sou</a>
+            <a class="header-menu-item" href="#">O que faço</a>
+            <a class="header-menu-item" href="#">Portfólio</a>
+            <a class="header-menu-item" href="#">Contato</a>
+
+        </nav>
+
+        </div>
 
     </header>
 
@@ -16,6 +29,10 @@
     </section>
 
     <section class="about" >
+
+    </section>
+
+    <section class="about-ido" >
 
     </section>
 
