--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a class="header-menu-item" href="#">O que faço</a>
             <a class="header-menu-item" href="#">Portfólio</a>
             <a class="header-menu-item" href="#">Contato</a>
+            <link rel="stylesheet" href="css/style.css">
 
         </nav>
 
