--- a/index.html
+++ b/index.html
@@ -118,10 +118,25 @@
 
             <div class="projects-content">
                 <h2 class="projects-primary">PORTFÓLIO</h2>
-                <div class="projects-info">
-                  <p class="text-projects">
-                    Sou Bacharel em Sistemas de Informação pela Universidade Federal do Piauí, fascinado por tecnologia desde criança, possuo interesse em desenvolvimento de games, desenvolvimento web e tudo que diz respeito à hardwares e softwares.
-                  </p>
+                <div class="projects-row">
+                        <div class="project-one">
+                          <h2>Encurtador de URL</h2>
+                          <p>Um encurtador de URL utilizando HTML, CSS e Javascript!</p>
+                          <img class="image" src="https://github.com/dev-paixao/encurtador-url/blob/main/img/preview.jpg" alt="Encurtador de URL" />
+                        </div>
+                   
+                        <div class="project-two">
+                          <h2>Gerador de QRCode</h2>
+                          <p>Um gerador de QRCode simples utilizando HTML, CSS e JavaScript!</p>
+                          <img class="image" src="https://github.com/dev-paixao/gerador-qrcode/blob/main/img/preview.jpg" alt="settings" />
+                        </div>
+                   
+                        <div class="project-three">
+                          <h2>Clone Amazon</h2>
+                          <p>Clone da página inicial da Amazon Prime Video usando apenas HTML e CSS</p>
+                          <img class="image" src="https://github.com/dev-paixao/prime-landingpage-template/blob/main/img/preview.gif" alt="article" />
+
+                      </div>
                 </div>
 
                 <div class="projects-btn">
