Update dos cards da sections portfólio

--- a/index.html
+++ b/index.html
@@ -119,22 +119,22 @@
             <div class="projects-content">
                 <h2 class="projects-primary">PORTFÓLIO</h2>
                 <div class="projects-row">
-                        <div class="project-one">
+                        <div class="card">
                           <h2>Encurtador de URL</h2>
                           <p>Um encurtador de URL utilizando HTML, CSS e Javascript!</p>
-                          <img class="image" src="https://github.com/dev-paixao/encurtador-url/blob/main/img/preview.jpg" alt="Encurtador de URL" />
+                          <img class="image" src="img/projetos-img/encurtar.jpg" alt="Encurtador de URL" />
                         </div>
                    
-                        <div class="project-two">
+                        <div class="card">
                           <h2>Gerador de QRCode</h2>
                           <p>Um gerador de QRCode simples utilizando HTML, CSS e JavaScript!</p>
-                          <img class="image" src="https://github.com/dev-paixao/gerador-qrcode/blob/main/img/preview.jpg" alt="settings" />
+                          <img class="image" src="img/projetos-img/qr.jpg" alt="settings" />
                         </div>
                    
-                        <div class="project-three">
+                        <div class="card">
                           <h2>Clone Amazon</h2>
                           <p>Clone da página inicial da Amazon Prime Video usando apenas HTML e CSS</p>
-                          <img class="image" src="https://github.com/dev-paixao/prime-landingpage-template/blob/main/img/preview.gif" alt="article" />
+                          <img class="image" src="img/projetos-img/prime.jpg" alt="article" />
 
                       </div>
                 </div>
