--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                           <h2>Clone Amazon</h2>
                           <p>Clone da página inicial da Amazon Prime Video usando apenas HTML e CSS</p>
                           <img class="image" src="img/projetos-img/prime.jpg" alt="article" />
+                          <a href="https://dev-paixao.github.io/encurtador-url/"></a>
 
                       </div>
                 </div>
