Update da estrutura html e do css

--- a/index.html
+++ b/index.html
@@ -148,10 +148,13 @@
         </section>
 
         <!-- end section  three-->
-    
+
+        <!-- start section  four-->
+
         <section class="contact" >
     
         </section>
+        <!-- end section  four-->
 
     </main>
     <footer class="footerbox">
