--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                    
                         <div class="card">
                           <h2>Clone Amazon</h2>
-                          <p>Clone da página inicial da Amazon Prime Video usando apenas HTML e CSS</p>
+                          <p>Clone da página da Amazon Prime Video usando apenas HTML e CSS</p>
                           <img class="image" src="img/projetos-img/prime.jpg" alt="article" />
                           <a href="https://dev-paixao.github.io/encurtador-url/"></a>
 
