--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <!-- start section  two-->
         <section class="about" id="about">
             <div class="about-content">
-                <h1 class="heading-about"> MINHAS SKILLS E  <span>POWER UP’S </span></h1>
+                <h1 class="heading-about"> MINHAS <span>SKILLS</span></h1>
 
                 <div class="offer">
                     <div class="offer-item">
