Class name change

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
        
         <button class="hamburger-menu">&#9776;</button>
-        <div class="teste">
+        <div class="header-items">
             <nav class="cabecalho-menu" >
                 <a class="cabecalho-menu-item" href="#">HOME</a>
                 <a class="cabecalho-menu-item" href="#about">SKILLS</a>
