--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="header-items">
             <nav class="cabecalho-menu" >
                 <a class="cabecalho-menu-item" href="#">HOME</a>
-                <a class="cabecalho-menu-item" href="#about">SKILLS</a>
+                <a class="cabecalho-menu-item" href="#skills">SKILLS</a>
             </nav>
             <img class="cabecalho-img" src="img/devpaixao-logo.png" alt="logo Encurtador">
             <nav class="cabecalho-menu" >
@@ -81,9 +81,9 @@
     <!-- end home section -->
     
     <!-- start section  two-->
-        <section class="about" id="about">
-            <div class="about-content">
-                <h1 class="heading-about"> MINHAS <span>SKILLS</span></h1>
+        <section class="skills" id="skills">
+            <div class="skills-content">
+                <h1 class="heading-skills"> MINHAS <span>SKILLS</span></h1>
 
                 <div class="offer">
                     <div class="offer-item">
