Update section skills

--- a/index.html
+++ b/index.html
@@ -88,23 +88,23 @@
                 <div class="offer">
                     <div class="offer-item">
                         <img class="offer-img" src="img/icons8-html.png" alt="">
-                        <p class="text-about">HTML</p>
+                        <p class="text-skills">HTML</p>
                     </div>
                     <div class="offer-item">
                         <img class="offer-img" src="img/icons8-css3.png" alt="">
-                        <p class="text-about">CSS</p>
+                        <p class="text-skills">CSS</p>
                     </div>
                     <div class="offer-item">
                         <img class="offer-img" src="img/icons8-logotipo-javascript.png" alt="">
-                        <p class="text-about">JAVASCRIPT</p>
+                        <p class="text-skills">JAVASCRIPT</p>
                     </div>
                     <div class="offer-item">
                         <img class="offer-img" src="img/icons8-unity.png" alt="">
-                        <p class="text-about">UNITY</p>
+                        <p class="text-skills">UNITY</p>
                     </div>
                     <div class="offer-item">
                         <img class="offer-img" src="img/icons8-c-afiado-logotipo.png" alt="">
-                        <p class="text-about">C SHARP</p>
+                        <p class="text-skills">C SHARP</p>
                     </div>
                 </div>
     
