--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <h1></h1>
                 <div class="home-info">
                   <p class="text-primary">
-                    Sou Bacharel em Sistemas de Informação, fascinado por tecnologia desde criança, possuo interesse em desenvolvimento de games, desenvolvimento web e tudo que diz respeito à hardwares e softwares.
+                    Sou Bacharel em Sistemas de Informação, fascinado por tecnologia desde criança, possuo interesse em desenvolvimento de games, desenvolvimento web e tudo que diz respeito à hardware e software.
                   </p>
                 </div>
 
