--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
                 </div>
 
                 <div class="card">
-                    <a href="https://github.com/dev-paixao/quiztcc" target="_blank">
-                      <img class="image-card" src="img/projetos-img/quizgame.jpg" alt="Quiz Game" />
+                    <a href="https://dev-paixao.github.io/responsive-footer/" target="_blank">
+                      <img class="image-card" src="img/projetos-img/footer.jpg" alt="Quiz Game" />
                     </a>
-                    <h2>Quiz Game</h2>
+                    <h2>Footer responsivo</h2>
                 </div>
 
             </div>
