--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
                         <img class="image-card" src="img/projetos-img/encurtar.jpg" alt="Encurtador de URL" />
                     </a>
                     <h2>Encurtador de URL</h2>
+                    <p>Um encurtador de URL utilizando HTML, CSS e Javascript!</p>
+                    <div class="home-btn">
+                        <a href="https://github.com/dev-paixao" target="_blank"><button class="btn">GITHUB</button> </a>
+                    </div>
                 </div>
            
                 <div class="card">
@@ -146,6 +150,10 @@
                         <img class="image-card" src="img/projetos-img/qr.jpg" alt="Gerador de QRCode" />
                     </a>
                     <h2>Gerador de QRCode</h2>
+                    <p>Um gerador de QRCode simples utilizando HTML, CSS e JavaScript!</p>
+                    <div class="home-btn">
+                        <a href="https://github.com/dev-paixao" target="_blank"><button class="btn">GITHUB</button> </a>
+                    </div>
                 </div>
 
                 <div class="card">
@@ -153,6 +161,10 @@
                         <img class="image-card" src="img/projetos-img/prime.jpg" alt="Clone Amazon" />
                     </a>
                     <h2>Clone Amazon</h2>
+                    <p>Clone da página inicial da Amazon Prime Video usando apenas HTML e CSS</p>
+                    <div class="home-btn">
+                        <a href="https://github.com/dev-paixao" target="_blank"><button class="btn">GITHUB</button> </a>
+                    </div>
               </div>
 
               <div class="card">
@@ -160,6 +172,22 @@
                         <img class="image-card" src="img/projetos-img/coffee.jpg" alt="landing page coffee" />
                     </a>
                     <h2>Landing page coffee</h2>
+                    <p>Landing page apenas com HTML e CSS!</p>
+                    <div class="home-btn">
+                        <a href="https://github.com/dev-paixao" target="_blank"><button class="btn">GITHUB</button> </a>
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <a href="https://dev-paixao.github.io/responsive-footer/" target="_blank">
+                      <img class="image-card" src="img/projetos-img/footer.jpg" alt="Quiz Game" />
+                    </a>
+                    <h2>Footer responsivo</h2>
+                    <p>Design de um footer simples feito com html e css</p>
+                    <div class="home-btn">
+                        <a href="https://github.com/dev-paixao" target="_blank"><button class="btn">GITHUB</button> </a>
+                    </div>
                 </div>
 
               <div class="card">
@@ -167,14 +195,13 @@
                     <img class="image-card" src="img/projetos-img/quizgame.jpg" alt="Quiz Game" />
                     </a>
                     <h2>Quiz Game</h2>
+                    <p>Um Quiz Acadêmico que ajudará o jogador a se preparar para avaliações, enem, vestibulares e até certificações, estudando e se divertindo ao mesmo tempo.</p>
+                    <div class="home-btn">
+                        <a href="https://github.com/dev-paixao" target="_blank"><button class="btn">GITHUB</button> </a>
+                    </div>
                 </div>
 
-                <div class="card">
-                    <a href="https://dev-paixao.github.io/responsive-footer/" target="_blank">
-                      <img class="image-card" src="img/projetos-img/footer.jpg" alt="Quiz Game" />
-                    </a>
-                    <h2>Footer responsivo</h2>
-                </div>
+
 
             </div>
     
