--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </a>
                     <h2>Encurtador de URL</h2>
                     <p>Um encurtador de URL utilizando HTML, CSS e Javascript!</p>
-                    <div class="home-btn">
+                    <div class="cards-btn">
                         <a href="https://github.com/dev-paixao" target="_blank"><button class="btn">GITHUB</button> </a>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                     </a>
                     <h2>Gerador de QRCode</h2>
                     <p>Um gerador de QRCode simples utilizando HTML, CSS e JavaScript!</p>
-                    <div class="home-btn">
+                    <div class="cards-btn">
                         <a href="https://github.com/dev-paixao" target="_blank"><button class="btn">GITHUB</button> </a>
                     </div>
                 </div>
@@ -162,7 +162,7 @@
                     </a>
                     <h2>Clone Amazon</h2>
                     <p>Clone da página inicial da Amazon Prime Video usando apenas HTML e CSS</p>
-                    <div class="home-btn">
+                    <div class="cards-btn">
                         <a href="https://github.com/dev-paixao" target="_blank"><button class="btn">GITHUB</button> </a>
                     </div>
               </div>
@@ -173,7 +173,7 @@
                     </a>
                     <h2>Landing page coffee</h2>
                     <p>Landing page apenas com HTML e CSS!</p>
-                    <div class="home-btn">
+                    <div class="cards-btn">
                         <a href="https://github.com/dev-paixao" target="_blank"><button class="btn">GITHUB</button> </a>
                     </div>
                 </div>
@@ -185,7 +185,7 @@
                     </a>
                     <h2>Footer responsivo</h2>
                     <p>Design de um footer simples feito com html e css</p>
-                    <div class="home-btn">
+                    <div class="cards-btn">
                         <a href="https://github.com/dev-paixao" target="_blank"><button class="btn">GITHUB</button> </a>
                     </div>
                 </div>
@@ -196,7 +196,7 @@
                     </a>
                     <h2>Quiz Game</h2>
                     <p>Um Quiz Acadêmico que ajudará o jogador a se preparar para avaliações, enem, vestibulares e até certificações, estudando e se divertindo ao mesmo tempo.</p>
-                    <div class="home-btn">
+                    <div class="cards-btn">
                         <a href="https://github.com/dev-paixao" target="_blank"><button class="btn">GITHUB</button> </a>
                     </div>
                 </div>
