--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <h2>Encurtador de URL</h2>
                     <p>Um encurtador de URL utilizando HTML, CSS e Javascript!</p>
                     <div class="cards-btn">
-                        <a href="https://github.com/dev-paixao" target="_blank"><button class="btn">GITHUB</button> </a>
+                        <a href="https://github.com/dev-paixao" target="_blank"><button class="button alt">GITHUB</button> </a>
                     </div>
                 </div>
            
@@ -152,7 +152,7 @@
                     <h2>Gerador de QRCode</h2>
                     <p>Um gerador de QRCode simples utilizando HTML, CSS e JavaScript!</p>
                     <div class="cards-btn">
-                        <a href="https://github.com/dev-paixao" target="_blank"><button class="btn">GITHUB</button> </a>
+                        <a href="https://github.com/dev-paixao" target="_blank"><button class="button alt">GITHUB</button> </a>
                     </div>
                 </div>
 
@@ -163,7 +163,7 @@
                     <h2>Clone Amazon</h2>
                     <p>Clone da página inicial da Amazon Prime Video usando apenas HTML e CSS</p>
                     <div class="cards-btn">
-                        <a href="https://github.com/dev-paixao" target="_blank"><button class="btn">GITHUB</button> </a>
+                        <a href="https://github.com/dev-paixao" target="_blank"><button class="button alt">GITHUB</button> </a>
                     </div>
               </div>
 
@@ -174,7 +174,7 @@
                     <h2>Landing page coffee</h2>
                     <p>Landing page apenas com HTML e CSS!</p>
                     <div class="cards-btn">
-                        <a href="https://github.com/dev-paixao" target="_blank"><button class="btn">GITHUB</button> </a>
+                        <a href="https://github.com/dev-paixao" target="_blank"><button class="button alt">GITHUB</button> </a>
                     </div>
                 </div>
 
@@ -186,7 +186,7 @@
                     <h2>Footer responsivo</h2>
                     <p>Design de um footer simples feito com html e css</p>
                     <div class="cards-btn">
-                        <a href="https://github.com/dev-paixao" target="_blank"><button class="btn">GITHUB</button> </a>
+                        <a href="https://github.com/dev-paixao" target="_blank"><button class="button alt">GITHUB</button> </a>
                     </div>
                 </div>
 
@@ -197,7 +197,7 @@
                     <h2>Quiz Game</h2>
                     <p>Um Quiz Acadêmico que ajudará o jogador a se preparar para avaliações, enem, vestibulares e até certificações, estudando e se divertindo ao mesmo tempo.</p>
                     <div class="cards-btn">
-                        <a href="https://github.com/dev-paixao" target="_blank"><button class="btn">GITHUB</button> </a>
+                        <a href="https://github.com/dev-paixao" target="_blank"><button class="button alt">GITHUB</button> </a>
                     </div>
                 </div>
 
