--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <button class="hamburger-menu">&#9776;</button>
         <div class="header-items">
             <nav class="cabecalho-menu" >
-                <a class="cabecalho-menu-item" href="#">HOME</a>
+                <a class="cabecalho-menu-item" href="#home">HOME</a>
                 <a class="cabecalho-menu-item" href="#skills">SKILLS</a>
             </nav>
             <img class="cabecalho-img" src="img/devpaixao-logo.png" alt="logo Encurtador">
@@ -67,7 +67,7 @@
 
     <!-- start home section -->
 
-        <section class="home">
+        <section class="home" id="home">
             <div class="home-content">
                 <h1 class="heading-primary-name">Diego Paixão</h1>
                 <h2 class="heading-primary"><span>front-end</span> engineer</h2>
