--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             </nav>
         </div>
 
+
+        <img class="cabecalho-img-responsive" src="img/devpaixao-logo.png" alt="logo Encurtador">
+
         <div class="menu-toggle">
             <div class="one"></div>
             <div class="two"></div>
