--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
 
 
-        <img class="cabecalho-img-responsive" src="img/devpaixao-logo.png" alt="logo Encurtador">
+        <img class="cabecalho-img-responsive" src="" alt="logo Encurtador">
 
         <div class="menu-toggle">
             <div class="one"></div>
