--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </nav>
         </div>
 
-        <img class="logo-img" src="img/devpaixao-logo.png" alt="logo Encurtador">
+        <img class="logo-responsive" src="img/devpaixao-logo.png" alt="logo Encurtador">
 
         <div class="menu-toggle">
             <div class="one"></div>
