--- a/index.html
+++ b/index.html
@@ -51,14 +51,15 @@
             </nav>
         </div>
 
-        <img class="logo-responsive" src="img/devpaixao-logo.png" alt="logo Encurtador">
+        <div class="menu-responsive">
+            <img class="logo-responsive" src="img/devpaixao-logo.png" alt="logo Encurtador">
 
-        <div class="menu-toggle">
-            <div class="one"></div>
-            <div class="two"></div>
-            <div class="three"></div>
+            <div class="menu-toggle">
+                <div class="one"></div>
+                <div class="two"></div>
+                <div class="three"></div>
+            </div>
         </div>
-
 
     </header>
     <main class="conteudo">
