--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         
         <div class="footer">
             <div class="media-icons">
-                <a href="#"> <i class="fa fa-whatsapp"></i> </a>
+                <a href="https://web.whatsapp.com/send?phone=5561995672321"> <i class="fa fa-whatsapp"></i> </a>
                 <a href="https://github.com/dev-paixao" target="_blank"> <i class="fa fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/dev-paixao/" target="_blank"> <i class="fa fa-linkedin"></i> </a> 
             </div>
