--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <section class="home" id="home">
             <div class="home-content">
                 <h1 class="heading-primary-name">Diego Paixão</h1>
-                <h2 class="heading-primary"><span>front-end</span> engineer</h2>
+                <h2 class="heading-primary"><span>front-end</span> developer</h2>
                 <h1></h1>
                 <div class="home-info">
                   <p class="text-primary">
