--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
 
                 <div class="home-btn">
-                    <button class="button-53" role="button">Button 53</button>
+                    <button class="button-53" role="button">Contacte me</button>
                 </div>
 
             </div>
