--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="top">
              
               <div class="media-icons">
-                  <a href="https://web.whatsapp.com/send?phone=5561995672321"> <i class="fa fa-whatsapp"></i> </a>
+                  <a href="https://web.whatsapp.com/send?phone=5561995672321" target="_blank"> <i class="fa fa-whatsapp"></i> </a>
                   <a href="https://github.com/dev-paixao" target="_blank"> <i class="fa fa-github"></i></a>
                   <a href="#"> <i class="fa fa-instagram"></i> </a>
                   <a href="#"> <i class="fa fa-twitter"></i> </a>
@@ -77,7 +77,7 @@
                 </div>
 
                 <div class="home-btn">
-                    <button class="button-53" role="button">Contacte me</button>
+                   <a href="https://web.whatsapp.com/send?phone=5561995672321" target="_blank"><button class="button-53" role="button"> Contacte me</button></a> 
                 </div>
 
             </div>
