--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                   </p>
                 </div>
 
-                <div class="home-btn">
-                   <a href="https://web.whatsapp.com/send?phone=5561995672321" target="_blank"><button class="button-53" role="button"> Contacte me</button></a> 
+                <div class="contacte-btn">
+                   <a href="https://web.whatsapp.com/send?phone=5561995672321" target="_blank"><button class="button-contacte" role="button"> Contacte me</button></a> 
                 </div>
 
             </div>
