--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </div>
 
                 <div class="contacte-btn">
-                   <a href="https://web.whatsapp.com/send?phone=5561995672321" target="_blank"><button class="button-contacte" role="button"> Contacte me</button></a> 
+                   <a href="https://web.whatsapp.com/send?phone=5561995672321" target="_blank"><button class="button-contacte" role="button"> contacte-me</button></a> 
                 </div>
 
             </div>
