--- a/index.html
+++ b/index.html
@@ -182,6 +182,8 @@
                 <a href="https://www.linkedin.com/in/dev-paixao/" target="_blank"> <i class="fa fa-linkedin"></i> </a> 
             </div>
 
+            <div class="copy">Copyright &copy; 2022 <a class="footer-copy"href="https://github.com/dev-paixao/portfolio" target="_blank">Diego Paixão</a></div>
+
             <div class="logo-details">
                       <div class="icon-phone"> 
                           <i class="fa fa-phone"></i>
@@ -195,7 +197,7 @@
                           61 99567 2321
                       </h3>
             </div>
-      </div>
+        </div>
         
         <div class="footer">
             <div class="media-icons">
@@ -205,7 +207,7 @@
             </div>
         </div>
 
-        <div class="copy">Copyright &copy; 2022 <a class="footer-copy"href="https://github.com/dev-paixao/portfolio" target="_blank">Diego Paixão</a></div>
+        <div class="copy-responsive">Copyright &copy; 2022 <a class="footer-copy"href="https://github.com/dev-paixao/portfolio" target="_blank">Diego Paixão</a></div>
 
     </footer>
 <script src="menu.js"></script>
