--- a/index.html
+++ b/index.html
@@ -166,6 +166,39 @@
         <!-- start section  four-->
 
         <section class="contact" >
+
+                <div class="heading-contact">
+                    <h1>contatos</h1>
+
+                </div>
+                <div class="contact-row">
+
+
+                    <div class="contact-icons">
+                        <a href="#"><i class="fa fa-envelope"></i></a>
+                        <h2>E-mail</h2>
+                        <p>dev.paixao@gamil.com</p>
+                    </div>
+
+                    <div class="contact-icons">
+                        <a href="https://web.whatsapp.com/send?phone=5561995672321"><i class="fa fa-whatsapp"></i> </a>
+                        <h2>whatsapp</h2>
+                        <p>(61) 99567231</p>
+                    </div>
+
+                    <div class="contact-icons">
+                        <a href="https://github.com/dev-paixao"><i class="fa fa-github"></i></a>
+                        <h2></a>github</h2>
+                        <p>@dev-paixao</p>
+                    </div>
+
+                    <div class="contact-icons">
+                        <a href="https://www.linkedin.com/in/dev-paixao/"><i class="fa fa-linkedin"></i></a> 
+                        <h2>linkedin</h2>
+                        <p>@dev-paixao</p> 
+                    </div>
+
+                </div>
     
         </section>
         <!-- end section  four-->
