--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a class="cabecalho-menu-item" href="#home">HOME</a>
                 <a class="cabecalho-menu-item" href="#skills">SKILLS</a>
                 <a class="cabecalho-menu-item" href="#cards-id">PORTFÓLIO</a>
-                <a class="cabecalho-menu-item" href="#">CONTATO</a>
+                <a class="cabecalho-menu-item" href="#contact-id">CONTATO</a>
             </nav>
             
         </div>
@@ -165,7 +165,7 @@
 
         <!-- start section  four-->
 
-        <section class="contact" >
+        <section class="contact" id="contact-id" >
 
                 <div class="heading-contact">
                     <h1>contatos</h1>
