--- a/index.html
+++ b/index.html
@@ -211,17 +211,17 @@
                 <div class="box">   
                     <h4>quem eu sou</h4>
                     <ul>
-                        <li><a href="#">Quem sou</a></li>
-                        <li><a href="">Minhas Skills</a></li>
-                        <li><a href="">Contacte-me</a></li>
+                        <li><a href="#home">Quem sou</a></li>
+                        <li><a href="#skills">Minhas Skills</a></li>
+                        <li><a href="https://web.whatsapp.com/send?phone=5561995672321" target="_blank">Contacte-me</a></li>
                     </ul>
                 </div>
                 <div class="box">
                     <h4>PORTFÓLIO</h4>
                     <ul>
-                        <li><a href="#">Encurtador de URL</a></li>
-                        <li><a href="#">Gerador de QRCode</a></li>
-                        <li><a href="#">Clone Amazon</a></li>
+                        <li><a href="https://dev-paixao.github.io/encurtador-url/" target="_blank">Encurtador de URL</a></li>
+                        <li><a href="https://dev-paixao.github.io/gerador-qrcode/" target="_blank">Gerador de QRCode</a></li>
+                        <li><a href="https://dev-paixao.github.io/prime-landingpage-template/" target="_blank">Clone Amazon</a></li>
                     </ul>
                 </div>
                 <div class="box">
