--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <section class="contact" id="contact-id" >
 
                 <div class="heading-contact">
-                    <h1>contatos</h1>
+                    <h1>contato</h1>
 
                 </div>
                 <div class="contact-row">
@@ -211,7 +211,7 @@
                 <div class="box">   
                     <h4>quem eu sou</h4>
                     <ul>
-                        <li><a href="#home">Quem sou</a></li>
+                        <li><a href="#home">Home</a></li>
                         <li><a href="#skills">Minhas Skills</a></li>
                         <li><a href="https://web.whatsapp.com/send?phone=5561995672321" target="_blank">Contacte-me</a></li>
                     </ul>
