--- a/index.html
+++ b/index.html
@@ -225,11 +225,18 @@
                     </ul>
                 </div>
                 <div class="box">
-                    <h4>Inscreva-se!</h4>
+                    <h4>Entre em contato!</h4>
                     <div class="form-sub">
-                        <form>
-                            <input type="email" placeholder="Digite o seu e-mail" required>
-                            <button>Inscreva-se</button>
+                        <form action="https://api.staticforms.xyz/submit" method="post">
+                            <label>Nome</label>
+                            <input type="text" name="name" placeholder="Digite seu nome" autocomplete="off">
+                            <label>E-mail</label>
+                            <input type="email" name="email" placeholder="Digite o seu e-mail" required autocomplete="off">
+                            <label>Mensagem</label>
+                            <textarea name="message" cols="30" rows="10" placeholder="Digite sua mensagem"></textarea>
+                            <button type="submit">Enviar</button>
+
+                            <input type="hidden" name="accessKey" value="3b55908a-8934-4fc4-a46b-06a428dabcd4"> <!-- Required -->
                         </form>
                     </div>
                 </div>
