--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
                             <button type="submit">Enviar</button>
 
                             <input type="hidden" name="accessKey" value="3b55908a-8934-4fc4-a46b-06a428dabcd4"> <!-- Required -->
+                            <input type="hidden" name="redirectTo" value="#">
                         </form>
                     </div>
                 </div>
