--- a/index.html
+++ b/index.html
@@ -181,19 +181,19 @@
                     </div>
 
                     <div class="contact-icons">
-                        <a href="https://web.whatsapp.com/send?phone=5561995672321"><i class="fa fa-whatsapp"></i> </a>
+                        <a href="https://web.whatsapp.com/send?phone=5561995672321" target="_blank"><i class="fa fa-whatsapp"></i> </a>
                         <h2>whatsapp</h2>
                         <p>(61) 99567231</p>
                     </div>
 
                     <div class="contact-icons">
-                        <a href="https://github.com/dev-paixao"><i class="fa fa-github"></i></a>
+                        <a href="https://github.com/dev-paixao" target="_blank"><i class="fa fa-github"></i></a>
                         <h2></a>github</h2>
                         <p>@dev-paixao</p>
                     </div>
 
                     <div class="contact-icons">
-                        <a href="https://www.linkedin.com/in/dev-paixao/"><i class="fa fa-linkedin"></i></a> 
+                        <a href="https://www.linkedin.com/in/dev-paixao/" target="_blank"><i class="fa fa-linkedin"></i></a> 
                         <h2>linkedin</h2>
                         <p>@dev-paixao</p> 
                     </div>
