--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@
 
         <section class="home" id="home">
             <div class="home-content">
-                <h1 class="heading-primary-name">Diego Paixão</h1>
-                <h2 class="heading-primary"><span>front-end</span> developer</h2>
+                <h1 class="heading-primary"><span>front-end</span> developer</h1>
                 <div class="home-info">
                   <p class="text-primary">
-                    Olá guys, sou Bacharel em Sistemas de Informação, fascinado por tecnologia desde criança, possuo interesse em desenvolvimento de games, desenvolvimento web e tudo que diz respeito à hardware e software.
+                    Hello, guys! sou Diego Paixão Bacharel em Sistemas de Informação, fascinado por tecnologia desde criança, possuo interesse em desenvolvimento de games, desenvolvimento web e tudo que diz respeito à hardware e software.
                   </p>
                 </div>
 
