--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
               </div>
 
               <div class="card">
-                    <a href="https://dev-paixao.github.io/landing-page-coffee/" target="_blank">
-                        <img class="image-card" src="img/projetos-img/coffee.jpg" alt="landing page coffee" />
+                    <a href="https://dev-paixao.github.io/clone-netflix-login/" target="_blank">
+                        <img class="image-card" src="img/projetos-img/clonenetflix.jpg" alt="landing page coffee" />
                     </a>
-                    <h2>Landing page coffee</h2>
-                    <p>Landing page apenas com HTML e CSS!</p>
+                    <h2>Clone Netflix</h2>
+                    <p>Clone da página de login da netflix usando apenas com HTML e CSS!</p>
                 </div>
 
 
