--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- start home section -->
 
-        <section class="home" id="home">
+        <section class="home parallax parallax-1" id="home">
             <div class="home-content">
                 <h1 class="heading-primary"><span>front-end</span> developer</h1>
                 <div class="home-info">
@@ -98,7 +98,7 @@
 
     <!-- start section  three-->
 
-        <section class="cards" id="cards-id">
+        <section class="cards parallax parallax-1" id="cards-id">
 
             <div class="cards-primary">
                 <h2>PORTFÓLIO</h2>
