Update link api whatsapp

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="contacte-btn">
-                   <a href="https://web.whatsapp.com/send?phone=5561995672321" target="_blank"><button class="button-contacte" role="button"> contacte-me</button></a> 
+                   <a href="https://api.whatsapp.com/send?phone=5561995672321" target="_blank"><button class="button-contacte" role="button"> contacte-me</button></a> 
                 </div>
 
             </div>
@@ -180,7 +180,7 @@
                     </div>
 
                     <div class="contact-icons">
-                        <a href="https://web.whatsapp.com/send?phone=5561995672321" target="_blank"><i class="fa fa-whatsapp"></i> </a>
+                        <a href="https://api.whatsapp.com/send?phone=5561995672321" target="_blank"><i class="fa fa-whatsapp"></i> </a>
                         <h2>whatsapp</h2>
                         <p>(61) 99567231</p>
                     </div>
@@ -212,7 +212,7 @@
                     <ul>
                         <li><a href="#home">Home</a></li>
                         <li><a href="#skills">Minhas Skills</a></li>
-                        <li><a href="https://web.whatsapp.com/send?phone=5561995672321" target="_blank">Contacte-me</a></li>
+                        <li><a href="https://api.whatsapp.com/send?phone=5561995672321" target="_blank">Contacte-me</a></li>
                     </ul>
                 </div>
                 <div class="box">
