--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="contacte-btn">
-                   <a href="https://api.whatsapp.com/send?phone=5561995672321" target="_blank"><button class="button-contacte" role="button"> contacte-me</button></a> 
+                   <a href="https://raw.githubusercontent.com/dev-paixao/portfolio/main/cv/Curr%C3%ADculo%20-%20Diego%20Paix%C3%A3o.pdf" target="_blank"><button class="button-contacte" role="button"> download CV</button></a> 
                 </div>
 
             </div>
