--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
    <!-- Fontawesome CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/skills.css">
+    <link rel="stylesheet" href="css/cards.css">
+    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/footerbox.css">
     <title>portifolio</title>
 </head>
 <body>
