--- a/index.html
+++ b/index.html
@@ -245,10 +245,13 @@
         </div>
         <div class="bottom-details">
             <div class="bottom_text">
-              <span class="copyright_text">Copyright &#169; 2022 <a href="#">dev-paixao.</a>All rights reserved</span>
-            </div>
+                <p class="copyright_text">&copy; <span id="ano_atual"></span> All rights reserved.
+                    <a href="https://www.seu-link-externo.com">dev_paixao</a> 
+                </p>
         </div>
+
     </footer>
 <script src="menu.js"></script>
+<script src="copy.js"></script>
 </body>
 </html>
