--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <div class="menu-responsive">
             <img class="logo-responsive" src="img/devpaixao-logo.png" alt="logo Encurtador">
             <div class="menu-toggle">
-                <div class="toggle-line"></div>
-                <div class="toggle-line"></div>
-                <div class="toggle-line"></div>
+                <div class="one"></div>
+                <div class="two"></div>
+                <div class="three"></div>
             </div>
         </div>
     </header>
