--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/cards.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/footerbox.css">
+    <link rel="stylesheet" href="css/animations.css">
+    
     <title>portifolio</title>
 </head>
 <body>
@@ -256,7 +258,8 @@
         </div>
 
     </footer>
-<script src="menu.js"></script>
-<script src="copy.js"></script>
+<script src="js/menu.js"></script>
+<script src="js/copy.js"></script>
+<script src="js/animations.js"></script>
 </body>
 </html>
