"Melhorias na responsividade das fontes
Esta atualização concentra-se na melhoria da responsividade das fontes em diferentes dispositivos. Para alcançar isso, utilizei uma estrutura que permite que as fontes se ajustem dinamicamente de acordo com o tamanho da viewport, proporcionando uma experiência de leitura mais consistente e agradável em telas de diferentes tamanhos.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <h1 class="heading-primary"><span>front-end</span> developer</h1>
                 <div class="home-info">
                   <p class="text-primary">
-                    Hello, guys! sou Diego Paixão Bacharel em Sistemas de Informação, fascinado por tecnologia desde criança, possuo interesse em desenvolvimento de games, desenvolvimento web e tudo que diz respeito à hardware e software.
+                    Transformando conceitos em interfaces intuitivas e envolventes
                   </p>
                 </div>
 
@@ -75,7 +75,7 @@
     <!-- start section  two-->
         <section class="skills" id="skills">
             <div class="skills-content">
-                <h1 class="heading-skills"> MINHAS HARD <span>SKILLS</span></h1>
+                <h1 class="heading-skills"> MINHAS<span>SKILLS</span></h1>
 
                 <div class="offer">
                     <div class="offer-item">
@@ -113,10 +113,15 @@
         <section class="cards parallax parallax-1" id="cards-id">
 
             <div class="cards-primary">
-                <h2>PORTFÓLIO</h2>
+                <h2>MEUS PROJETOS</h2>
             </div>
             
             <div class="cards-row">
+                <div class="card-text">
+                    <h2>Bem-vindo ao meu portfólio pessoal!</h2>
+                    <p>Aqui apresento alguns dos projetos que desenvolvi, demonstrando o conhecimento que adquiri em HTML, CSS e JavaScript.</p>
+                </div>
+
                 <div class="card">
                     <a href="https://dev-paixao.github.io/pomodoro-clock/" target="_blank">
                         <img class="image-card" src="img/projetos-img/pomodoro-img.jpg" alt="Relógio Pomodoro" />
@@ -180,14 +185,6 @@
                     </a>
                     <h2>Tempo Certo</h2>
                     <p>Aplicação web em HTML, CSS e JavaScript que utiliza a API Weather API para informações meteorológicas.</p>
-                </div>
-
-              <div class="card">
-                    <a href="https://github.com/dev-paixao/quiztcc" target="_blank">
-                    <img class="image-card" src="img/projetos-img/quizgame.jpg" alt="Quiz Game" />
-                    </a>
-                    <h2>Quiz Game</h2>
-                    <p>Jogo de questionários acadêmicos para preparação de avaliações, usando Unity e C#.</p>
                 </div>
 
             </div>
