--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/footerbox.css">
     <link rel="stylesheet" href="css/animations.css">
+    <link rel="stylesheet" href="css/responsive.css">
     
     <title>portifolio</title>
 </head>
