Create branch 'visual-updates' para atualizações e melhorias visuais

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 
     <header class="header">
         <div class="header-items">
-            <img class="header-logo" src="img/devpaixao-logo.png" alt="logo">
+            <h1 class="logo">
+                <a href="#">HUNT<span>ER</span></a>
+            </h1>
+            
             <nav class="header-menu">
                 <a class="header-menu-item" href="#home">HOME</a>
                 <a class="header-menu-item" href="#skills">SKILLS</a>
@@ -57,6 +60,7 @@
         <section class="home parallax parallax-1" id="home">
             <div class="home-content">
                 <h1 class="heading-primary"><span>front-end</span> developer</h1>
+                <h1></h1>
                 <div class="home-info">
                   <p class="text-primary">
                     Transformando conceitos em interfaces intuitivas e envolventes
@@ -76,7 +80,7 @@
     <!-- start section  two-->
         <section class="skills" id="skills">
             <div class="skills-content">
-                <h1 class="heading-skills"> MINHAS<span>SKILLS</span></h1>
+                <h2 class="heading-skills"> MINHAS<span>SKILLS</span></h2>
 
                 <div class="offer">
                     <div class="offer-item">
@@ -199,32 +203,32 @@
         <section class="contact" id="contact-id" >
 
                 <div class="heading-contact">
-                    <h1>contato</h1>
+                    <h2>contato</h2>
 
                 </div>
                 <div class="contact-row">
 
                     <div class="contact-icons">
                         <a href="https://github.com/dev-paixao" target="_blank"><i class="fa fa-github"></i></a>
-                        <h2></a>github</h2>
+                        <h3></a>github</h3>
                         <p>@dev-paixao</p>
                     </div>
 
                     <div class="contact-icons">
                         <a href="https://www.linkedin.com/in/dev-paixao/" target="_blank"><i class="fa fa-linkedin"></i></a> 
-                        <h2>linkedin</h2>
+                        <h3>linkedin</h3>
                         <p>@dev-paixao</p> 
                     </div>
 
                     <div class="contact-icons">
                         <a href="#"><i class="fa fa-envelope"></i></a>
-                        <h2>E-mail</h2>
+                        <h3>E-mail</h3>
                         <p>dev.paixao@gamil.com</p>
                     </div>
 
                     <div class="contact-icons">
                         <a href="https://api.whatsapp.com/send?phone=5561995672321" target="_blank"><i class="fa fa-whatsapp"></i> </a>
-                        <h2>whatsapp</h2>
+                        <h3>whatsapp</h3>
                         <p>(61) 99567-2321</p>
                     </div>
 
